dataset1235/2025-2/610742602/users/4074228937/executions/677928262_1462915504.log
== SUBMISSION (2025-08-24 00:06:23)
-- CODE: 
import math

x = float(input("Insira o comprimento do lado do pentágono: "))

area = 5/2 * x * (x/(2* math.tan((math.pi)/5)))

print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira o comprimento do lado do pentágono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira o comprimento do lado do pentágono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira o comprimento do lado do pentágono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira o comprimento do lado do pentágono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira o comprimento do lado do pentágono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira o comprimento do lado do pentágono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 00:05:03)
-- CODE: 
import math

x = float(input("Insira o comprimento do lado do pentágono: "))

apotema = x/(2. math.tan((math.pi)/5))
area = 5/2 * x * apotema

print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 00:05:06)
-- CODE: 
import math

x = float(input("Insira o comprimento do lado do pentágono: "))

apotema = x/(2. math.tan((math.pi)/5))
area = 5/2 * x * apotema

print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = x/(2. math.tan((math.pi)/5))
                 ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
